# mlops_3

./: Dockerfile  README.md  justfile  pyproject.toml
confs/: preprocessing.yaml
src/: __main__.py  train.py  utils.py
src/mlops_3/: __init__.py  __main__.py
src/mlops_3/train/: train.py
tasks/: project.just
tests/: test_scripts.py
